# mcp-sdk-py

./: .gitignore  CLAUDE.md  pyproject.toml
src/mcp_sdk_py/: __init__.py  authorization.py  caching.py  capabilities.py  common_types.py  completion.py  conformance.py  content_types.py  discovery.py  elicitation.py  elicitation_form.py  errors.py  extension_mechanism.py  extensions.py  foundations.py  http_responses.py  json_value.py  jsonrpc.py  lifecycle.py  logging_utils.py  meta_object.py  multi_round_trip.py  (+25 more)
tests/: test_s01_foundations.py  test_s02_json_value.py  test_s03_jsonrpc_framing.py  test_s04_result_error_base.py  test_s05_meta_object.py  test_s06_stateless_model.py  test_s07_protocol_revision.py  test_s08_discovery.py  test_s09_negotiation.py  test_s10_capabilities.py  test_s11_extensions.py  test_s12_transport_model.py  test_s13_stdio_transport.py  test_s14_streamable_http.py  test_s15_http_responses.py  test_s16_streaming_subscriptions.py  test_s17_multi_round_trip.py  test_s18_pagination.py  test_s19_response_caching.py  test_s20_common_types.py  test_s21_content_types.py  test_s22_progress_cancellation.py  test_s23_logging_trace.py  test_s24_tools.py  test_s25_tools_call.py  test_s26_resources.py  test_s27_resources_read.py  test_s28_prompts.py  test_s29_completion.py  test_s30_elicitation.py  test_s31_elicitation_form.py  test_s32_roots.py  test_s33_sampling.py  test_s34_error_handling.py  test_s35_authorization.py  test_s36_oauth_flow.py  test_s37_oauth_registration.py  test_s38_extension_mechanism.py  test_s39_tasks.py  test_s40_tasks_ops.py  (+6 more)
