[project]
name = "mcp-sdk-py"
version = "0.1.0"
description = "Model Context Protocol SDK for Python"
readme = "README.md"
authors = [
  { name = "Tanzim Saqib", email = "tanzimsaqib@live.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/stackific/mcp-sdk-py"
Repository = "https://github.com/stackific/mcp-sdk-py"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.1.0",
  "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["mcp_sdk_py"]
branch = true
